--- a/Index.html
+++ b/Index.html
@@ -164,7 +164,7 @@
     <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
             <div class="col-12 col-lg-4"> <!-- Change to col-lg-4 for smaller image -->
-                <img class="img-fluid rounded" loading="lazy" src="https://raw.githubusercontent.com/username/repository/branch/path/to/bg-about.jpeg" alt="About 2">
+                <img src="bg-about.jpeg" class="card-img-top" alt="Placeholder image">
             </div>
             <div class="col-12 col-lg-8"> <!-- Adjusted to maintain layout -->
                 <div class="row justify-content-xl-center">
