--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,7 @@
     </style>
 </head>
 <body>
+    <!--navbar-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">My Website</a>
@@ -50,10 +51,10 @@
         </div>
     </nav>
 
+    <!--Toast-->
     <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center w-100 mt-3">
         <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000" id="myToast">
             <div class="toast-header">
-                <!-- Using Feather Icon instead of image -->
                 <i data-feather="bell" class="me-2"></i>
                 <strong class="me-auto">Notification</strong>
                 <small>Just now</small>
@@ -65,7 +66,7 @@
         </div>
     </div>
 
-
+    <!--cards-->
     <div class="container my-4">
         <div class="row">
             <div class="col-md-6">
@@ -103,7 +104,7 @@
         </div>
     </div>
 
-    <!-- Service 3 - Bootstrap Brain Component -->
+    <!--feature-->
 <section class="py-5 py-xl-8"> 
     <div class="container overflow-hidden">
       <div class="row gy-5 gx-md-4 gy-lg-0 gx-xxl-5 justify-content-center">
@@ -159,14 +160,14 @@
     </div>
   </section>
 
-  <!-- About 2 - Bootstrap Brain Component -->
+  <!--about-->
 <section class="py-3 py-md-5">
     <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
-            <div class="col-12 col-lg-4"> <!-- Change to col-lg-4 for smaller image -->
+            <div class="col-12 col-lg-4"> 
                 <img src="bg-about.jpeg" class="card-img-top" alt="Placeholder image">
             </div>
-            <div class="col-12 col-lg-8"> <!-- Adjusted to maintain layout -->
+            <div class="col-12 col-lg-8">
                 <div class="row justify-content-xl-center">
                     <div class="col-12 col-xl-10">
                         <h2 class="mb-3">About</h2>
@@ -186,7 +187,7 @@
     <script>
         feather.replace();
         
-        // Show toast automatically after page loads
+        // Show toast automatically
         document.addEventListener('DOMContentLoaded', function() {
             var toastEl = document.querySelector('.toast');
             var toast = new bootstrap.Toast(toastEl);
