--- a/Index.html
+++ b/Index.html
@@ -165,7 +165,7 @@
     <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
             <div class="col-12 col-lg-4"> 
-                <img src="bg-about.jpeg" class="card-img-top" alt="Placeholder image">
+                <img src="bg-about.jpg" class="card-img-top" alt="Placeholder image">
             </div>
             <div class="col-12 col-lg-8">
                 <div class="row justify-content-xl-center">
@@ -184,6 +184,29 @@
     </div>
 </section>
 
+<!--footer-->
+<div class="container-fluid p-0">
+    <footer class="text-center text-lg-start" style="background-color: #1e3a8a; color: white;">
+        <div class="container py-4">
+            <h5 class="text-center mb-3">Contact Us</h5>
+            <p class="text-center mb-4">Stay connected with us through social media!</p>
+            <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-link btn-floating mx-2 social-btn" style="color: white;">
+                    <i data-feather="facebook"></i>
+                </button>
+                <button type="button" class="btn btn-link btn-floating mx-2 social-btn" style="color: white;">
+                    <i data-feather="youtube"></i>
+                </button>
+                <button type="button" class="btn btn-link btn-floating mx-2 social-btn" style="color: white;">
+                    <i data-feather="instagram"></i>
+                </button>
+                <button type="button" class="btn btn-link btn-floating mx-2 social-btn" style="color: white;">
+                    <i data-feather="twitter"></i>
+                </button>
+            </div>
+        </div>
+    </footer>
+</div>
     <script>
         feather.replace();
         
